# 1D-burgers-equation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
configs/: burgers_autoencoder.yaml  burgers_dmd.yaml  burgers_generate.yaml  burgers_pod.yaml  cylinder_autoencoder.yaml  cylinder_data.yaml  cylinder_dmd.yaml  cylinder_pod.yaml
configs/burgers/: autoencoder.yaml  dmd.yaml  generate.yaml  pdebench_autoencoder.yaml  pdebench_dmd.yaml  pdebench_pod.yaml  pdebench_prepare.yaml  pod.yaml  pod_rom.yaml  run_all.yaml
data/processed/burgers/: pdebench_burgers_nu0.01_subset.metadata.json  pdebench_burgers_nu0.01_subset.resolved.yaml
examples/burgers/: README.md
notebooks/: 01_burgers_exploration.ipynb  02_cylinder_exploration.ipynb
reports/: overleaf_burgers_results.tex
scripts/: _bootstrap.py  analyze_burgers_failure_modes.py  compare_models.py  create_burgers_logic_review.py  evaluate_model.py  generate_burgers.py  prepare_cylinder_data.py  prepare_pdebench_burgers.py  run_all.py  train_autoencoder.py  train_dmd.py  train_pod.py  train_pod_rom.py
src/rom_bench/: __init__.py  config.py  paths.py  seed.py
src/rom_bench/data/: burgers.py  cylinder.py  datasets.py  io.py  pdebench.py  preprocessing.py
src/rom_bench/evaluation/: field_metrics.py  force_coefficients.py  frequency.py  front_tracking.py  phase_error.py  reports.py
src/rom_bench/models/: autoencoder_1d.py  autoencoder_2d.py  dmd.py  latent_dynamics.py  pod.py  pod_galerkin.py
src/rom_bench/training/: callbacks.py  losses.py  trainer.py
src/rom_bench/visualization/: burgers_plots.py  common.py  cylinder_plots.py  latent_plots.py
tests/: test_burgers_solver.py  test_data_io.py  test_dmd.py  test_metrics.py  test_pod.py  test_pod_galerkin.py
