[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rom-fluid-benchmarks"
version = "0.1.0"
description = "Reduced-order modeling benchmarks for Burgers and cylinder wake flows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "torch",
  "scikit-learn",
  "PyYAML",
  "h5py",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
vtk = ["meshio", "pyvista"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
