[metadata]
name = one-d-burgers-equation
version = 0.1.0
description = Reduced-order modeling experiments for the 1D Burgers equation
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    torch
    scikit-learn
    PyYAML
    h5py
    tqdm

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    ruff
    mypy
